# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.52 2010/07/03 02:10:57 vapier Exp $

  03 Jul 2010; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Mark alpha/arm/ia64/s390/sh stable #323893.

  27 Jun 2010; <nixnut@gentoo.org> e2fsprogs-libs-1.41.11.ebuild:
  ppc stable #323893

  23 Jun 2010; Christoph Mende <angelos@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Stable on amd64 wrt bug #323893

  21 Jun 2010; Jeroen Roovers <jer@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Stable for HPPA (bug #322709).

  14 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  x86 stable wrt bug #323893

  31 Mar 2010; <solar@gentoo.org> e2fsprogs-libs-1.41.7.ebuild,
  e2fsprogs-libs-1.41.9.ebuild, e2fsprogs-libs-1.41.10.ebuild,
  e2fsprogs-libs-1.41.11.ebuild:
  - elibc_glibc has to be defined in IUSE= for profiles that are unable to
  use.force that flag bug #312085

*e2fsprogs-libs-1.41.11 (20 Mar 2010)

  20 Mar 2010; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.11.ebuild:
  Version bump.

  20 Mar 2010; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild, e2fsprogs-libs-1.41.10.ebuild:
  Dont install libext2fs.info #305613 by Christian Ostheimer.

*e2fsprogs-libs-1.41.10 (07 Mar 2010)

  07 Mar 2010; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.10.ebuild:
  Version bump #306589 by Krzysztof Olędzki.

  07 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  amd64 stable wrt #284745

  01 Dec 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.3-r1.ebuild, e2fsprogs-libs-1.41.6.ebuild,
  e2fsprogs-libs-1.41.7.ebuild, e2fsprogs-libs-1.41.8.ebuild,
  e2fsprogs-libs-1.41.9.ebuild:
  Switch to new tc-has-tls function rather than USE=elibc_uclibc.

  29 Nov 2009; Joseph Jezak <josejx@gentoo.org>