@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.52 2010/07/03 02:10:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.53 2010/07/03 02:12:07 vapier Exp $
+
+*e2fsprogs-libs-1.41.12 (03 Jul 2010)
+
+  03 Jul 2010; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.12.ebuild:
+  Version bump #326655 by Sebastian Koehler.
 
   03 Jul 2010; Mike Frysinger <vapier@gentoo.org>
   e2fsprogs-libs-1.41.11.ebuild:
